--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <li><%= link_to "All wikis",  root_path %></li>
       <li><%= link_to "All wikis",  root_path %></li>
       <li><%= link_to "Popular Wikis",  root_path %></li>
-      <li><%= link_to "Users", users_path %></li>
+      <li><%= link_to "Users", user_path(:id) %></li>
       <li><%= link_to "About", about_path %></li>
 
       <div class="pull-right user-info">
