--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,16 @@
- <h1>Welcome to Blocipedia</h1>
- <p id="index-title">This is the home page for Blocipedia.</p>
-
+<br>
+  <div class="jumbotron">
+    <h1>Blocipedia</h1>
+    <p>Even better than wikipedia!</p>
+    <% if current_user %>
+      <p><%= link_to "Check out some wikis!", root_path %></p>
+    <% else %>
+      <p>
+      <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
+      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+      </p>
+    <% end %>
+   <br> 
+  </div>
+<br>
+<br>
