--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -6,4 +6,21 @@
   margin-left: 10%;
   margin-right: 10%;
   text-align: center;
+  margin-top: 4%
+}
+
+.col-md-8.col-md-offset-2 {
+  text-align: center;
+}
+
+.media-body-public {
+  text-align: center;
+}
+
+.col-md-4.col-md-offset-1 {
+  text-align: center;
+}
+
+.row-bottom {
+  margin-top: 1%;
 }
