--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,13 @@
   <div class = "container">
     <ul class="nav nav-tabs">
       <li><%= link_to "Blocipedia", root_path %></li>
-      <li><%= link_to "All wikis",  root_path %></li>
-      <li><%= link_to "All wikis",  root_path %></li>
-      <li><%= link_to "Popular Wikis",  root_path %></li>
+      <li><%= link_to "All wikis",  wikis_path %></li>
+      <li><%= link_to "Popular Wikis",  wikis_path %></li>
       <li><%= link_to "Users", user_path(:id) %></li>
       <li><%= link_to "About", about_path %></li>
 
       <div class="pull-right user-info">
         <% if current_user %>
-                Hello <%= link_to (current_user.name || current_user.email), current_user %>!
             <%= link_to edit_user_registration_path, class: 'btn btn-primary btn-sm' do %>
               <span class="glyphicon glyphicon-user"></span>
             <% end %>
