--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,16 +1,38 @@
-<br>
+
+<div class="col-md-8 col-md-offset-2">
+  <h2>Blocipedia: Social, Markdown Wikis</h2>
+</div>
+
+<div class="col-md-12">
   <div class="jumbotron">
-    <h1>Blocipedia</h1>
+    <h1>Create and share Markdown Wikis</h1>
     <p>Even better than wikipedia!</p>
     <% if current_user %>
-      <p><%= link_to "Check out some wikis!", root_path %></p>
+      <p><%= link_to "Check out some wikis!", wikis_path %></p>
     <% else %>
       <p>
-      <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
-      <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+        <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
+        <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
       </p>
     <% end %>
-   <br> 
+    <br> 
   </div>
+</div>
+
+  <div class="row-bottom">
+    <div class="col-md-4 col-md-offset-1">
+      <div class="media-body-public">
+        <h4>Create as many public wikis as you want!</h4>
+        <div><%= link_to "Free Plan",  wikis_path , class: 'btn btn-primary btn-lg'%></div> 
+      </div>
+    </div>
+    <div class="col-md-4 col-md-offset-1">
+      <div class="media-body-public">
+        <h4>Click here to create your own private wikis!</h4>
+        <div><%= link_to "Premium Plan",  wikis_path , class: 'btn btn-primary btn-lg'%></div>
+      </div>
+    </div>
+  </div>
+
 <br>
 <br>
