--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,18 +1,35 @@
 <h1>Edit Wiki</h1>
- 
-   <div class="col-md-8">
-     <%= form_for @wiki do |f| %>
-       <div class="form-group">
-         <%= f.label :title %>
-         <%= f.text_field :title, class: 'form-control', placeholder: "Enter NEW wiki title" %>
-       </div>
-       <div class="form-group">
-         <%= f.label :body %>
-         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter NEW wiki body" %>
-       </div>
-       <div class="form-group">
-         <%= f.submit "Save", class: 'btn btn-success' %>
-       </div>
-     <% end %>
-   </div>
- </div>
+<div class = "row"> 
+  
+    <%= form_for @wiki do |f| %>
+      <div class = "row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <%= f.label :title %>
+            <%= f.text_field :title, class: 'form-control', placeholder: "Enter NEW wiki title" %>
+          </div>
+          <div class="form-group">
+            <%= f.label :body %>
+            <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter NEW wiki body" %>
+          </div>
+        </div>
+
+      <div class="col-md-6">
+
+        <div id="previewh4"><h4><%=@wiki.title%></h4></div>
+        <br>
+        <br>
+        <p><%= @wiki.body %></p>
+      
+      </div>
+
+      </div>
+   
+      <div class = "row">
+      <div class="form-group save-button span7 text-center">
+        <%= f.submit "Save", class: 'btn-lg btn-success' %>
+      </div>
+      </div>
+
+    <% end %>
+  </div>
