add stripe pages, links. not working

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -43,6 +43,14 @@
         <%= f.submit "Update", class: 'btn btn-success' %>
       </div>
     <% end %>
+    
+    <% if current_user.role == 'premium' %>
+      <h3>Downgrade to standard</h3>
+      <div><%= link_to "Standard Plan",  wikis_path , class: 'btn btn-danger'%></div>
+    <% else %>
+      <h3>Upgrade to premium</h3>
+      <div><%= link_to "Premium Plan",  wikis_path , class: 'btn btn-primary'%></div>
+    <% end %>
 
     <h3>Cancel my account</h3>
     <div class="form-group">
