--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
 <div class="col-md-8 col-md-offset-2">
   <h2>Blocipedia: Social, Markdown Wikis</h2>
 </div>
-
+<div class="row">
 <div class="col-md-12">
   <div class="jumbotron">
     <h1>Create and share Markdown Wikis</h1>
@@ -18,21 +18,23 @@
     <br> 
   </div>
 </div>
+</div>
 
-  <div class="row-bottom">
-    <div class="col-md-4 col-md-offset-1">
+<div class = "row row-bottom">
+  <% if current_user %>
+    <div class="col-md-4 col-md-offset-2">
       <div class="media-body-public">
         <h4>Create as many public wikis as you want!</h4>
-        <div><%= link_to "Free Plan",  wikis_path , class: 'btn btn-primary btn-lg'%></div> 
+        <div><%= link_to "Free Plan",  wikis_path , class: 'btn btn-primary btn-lg'%>
+        </div> 
       </div>
     </div>
-    <div class="col-md-4 col-md-offset-1">
+    <div class="col-md-4 ">
       <div class="media-body-public">
         <h4>Click here to create your own private wikis!</h4>
-        <div><%= link_to "Premium Plan",  wikis_path , class: 'btn btn-primary btn-lg'%></div>
+        <div><%= link_to "Premium Plan",  new_charge_path , class: 'btn btn-primary btn-lg'%>
+        </div>
       </div>
     </div>
-  </div>
-
-<br>
-<br>
+  <% end %>
+</div>
