--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -11,7 +11,8 @@
 }
 
 .row.pan7.text-center {
-    padding-top: 2%;
+  padding-top: 2%;
+  padding-bottom: 4%;
 }
 
 .item-edit-delete {
@@ -19,7 +20,7 @@
   font-size: 12px;
 }
 
-
 #previewh4 {
   padding-top: 2%;
 }
+
