--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,4 +54,11 @@
     <%= yield %>
   </div>
 </body>
+<footer>
+  <% if (current_user && (current_user.role != 'premium')) %>
+    <div class="row navbar navbar-bottom pan7 text-center">
+      <%= link_to "Premium Plan - Click here to create your own private wikis!",  new_charge_path %>
+    </div>
+  <% end %>
+</footer>
 </html>
