--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,7 +21,9 @@
 </div>
 
 <div class = "row row-bottom">
-  <% if current_user %>
+  <% if current_user && (current_user.role == 'premium')%>
+    
+  <% else %>
     <div class="col-md-4 col-md-offset-2">
       <div class="media-body-public">
         <h4>Create as many public wikis as you want!</h4>
