--- a/app/assets/stylesheets/charges.scss
+++ b/app/assets/stylesheets/charges.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the ChargesController controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.row.pay.pan7.text-center {
+  padding-top: 10%;
+}
