--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,7 +23,7 @@
 <div class = "row row-bottom">
   <% if current_user && (current_user.role == 'premium')%>
     
-  <% else %>
+  <% elsif current_user %>
     <div class="col-md-4 col-md-offset-2">
       <div class="media-body-public">
         <h4>Create as many public wikis as you want!</h4>
