--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -16,10 +16,10 @@
 
       <div class="col-md-6">
 
-        <div id="previewh4"><h4><%=@wiki.title%></h4></div>
+        <div id="previewh4"><h4><%= @wiki.title %></h4></div>
         <br>
         <br>
-        <p><%= @wiki.body %></p>
+        <p><%= markdown_to_html(@wiki.body) %></p>
       
       </div>
 
