--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -6,7 +6,7 @@
 
 <% @wikis.each do |wiki| %>
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-4 col-md-offset-2">
     <div class="list-group">
       <div class="list-group-item">       
         <strong><%= link_to wiki.title, wiki %></strong>
