--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -5,7 +5,7 @@
   <div class="col-md-3">
     <div class="list-group">
       <div class="list-group-item">  
-        <%= link_to "add collaborator", collaborators_path %>
+        <%= link_to "add collaborator", wiki_collaborators_path(@wiki) %>
       </div>
     </div>
   </div>
