--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,2 @@
 <h1>About Blocipedia</h1>
-<p>Just like Wikipedia</p>
+<p>Blocipedia is a platform that offers free, shareable Wiki-like pages. It also has a paid tier for private wiki pages. If you have any quesitons or comments please contact me at brockdonovan@gmail.com</p>
