--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,42 +1,34 @@
-
 <div class="col-md-8 col-md-offset-2">
   <h2>Blocipedia: Social, Markdown Wikis</h2>
 </div>
 <div class="row">
-<div class="col-md-12">
-  <div class="jumbotron">
-    <h1>Create and share Markdown Wikis</h1>
-    <p>Even better than wikipedia!</p>
-    <% if current_user %>
-      <p><%= link_to "Check out some wikis!", wikis_path %></p>
-    <% else %>
-      <p>
-        <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
-        <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
-      </p>
-    <% end %>
-    <br> 
+  <div class="col-md-12">
+    <div class="jumbotron">
+      <h3>Create and share Markdown Wikis</h3>
+      <small>Even better than wikipedia!</small>
+      
+      <% if current_user %>
+        <p><%= link_to "Check out some wikis!", wikis_path %></p>
+      <% else %>
+        <p>
+          <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
+          <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+        </p>
+      <% end %>
+      
+      <div class = "row row-bottom">
+        
+        <% if current_user && (current_user.role != 'premium')%>
+          <div class="col-md-4 ">
+            <div class="media-body-public">
+              <small>Click here to create your own private wikis!</small>
+              <div><%= link_to "Premium Plan",  new_charge_path , class: 'btn btn-primary btn'%>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      
+      </div>
+    </div>
   </div>
-</div>
-</div>
-
-<div class = "row row-bottom">
-  <% if current_user && (current_user.role == 'premium')%>
-    
-  <% elsif current_user %>
-    <div class="col-md-4 col-md-offset-2">
-      <div class="media-body-public">
-        <h4>Create as many public wikis as you want!</h4>
-        <div><%= link_to "Free Plan",  wikis_path , class: 'btn btn-primary btn-lg'%>
-        </div> 
-      </div>
-    </div>
-    <div class="col-md-4 ">
-      <div class="media-body-public">
-        <h4>Click here to create your own private wikis!</h4>
-        <div><%= link_to "Premium Plan",  new_charge_path , class: 'btn btn-primary btn-lg'%>
-        </div>
-      </div>
-    </div>
-  <% end %>
 </div>
