--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,5 +1,6 @@
 <h1>Edit Wiki</h1>
-<div class = "row"> 
+<div class="container">
+  <div class = "row"> 
   
     <%= form_for @wiki do |f| %>
       <div class = "row">
@@ -15,7 +16,7 @@
         </div>
 
       <div class="col-md-6">
-
+        Preview
         <div id="previewh4"><h4><%= @wiki.title %></h4></div>
         <br>
         <br>
@@ -33,3 +34,4 @@
 
     <% end %>
   </div>
+</div>
