--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,44 +1,44 @@
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-sm-4 col-sm-offset-4 text-center">
     <h1>My Wikis</h1>
   </div>
 </div>
 
 <% @wikis.each do |wiki| %>
-<div class="row">
-  <div class="col-md-4 col-md-offset-2">
-    <div class="list-group">
-      <div class="list-group-item">       
-        <strong><%= link_to wiki.title, wiki %></strong>
+  <div class="row wiki">
+    <div class="col-sm-4 col-sm-offset-2">
+      <div class="list-group">
+        <div class="list-group-item"> 
+          <div class="text-center">       
+            <strong><%= link_to wiki.title, wiki %></strong>
+          </div>
+        </div>
+      </div> 
+    </div>
+    
+    <div class="col-sm-2">
+      <div class="list-group">  
+        <div class="list-group-item"> 
+          <div class="text-center">
+            <%= link_to "Edit", edit_wiki_path(wiki.id)%>
+          </div>
+        </div> 
       </div>
-    </div> 
-  </div>
-  
-  <div class="col-md-1">
-    <div class="list-group">  
-      <div class="list-group-item"> 
-        <div class="item-edit-delete">
-          <%= link_to "Edit", edit_wiki_path(wiki.id)%>
-        </div>
-      </div> 
     </div>
-  </div>
-  
-  <div class="col-md-2">
-    <div class="list-group">
-      <div class="list-group-item"> 
-        <div class="item-edit-delete">
-        <%= link_to "Delete", wiki, method: :delete, data: {confirm: 'Are you sure you want to delete this wiki!?' } %>
-        </div>
-      </div> 
+    
+    <div class="col-sm-2">
+      <div class="list-group">
+        <div class="list-group-item"> 
+          <div class="text-center">
+          <%= link_to "Delete", wiki, method: :delete, data: {confirm: 'Are you sure you want to delete this wiki!?' } %>
+          </div>
+        </div> 
+      </div>
     </div>
-  </div>
 
-</div>
+  </div>
 <% end %>
 
-  <div class="row pan7 text-center">
-    <%= link_to "New Wiki", new_wiki_path, class: 'btn-lg btn-success' %>
-  </div>
-
-
+<div class="row pan7 text-center">
+  <%= link_to "New Wiki", new_wiki_path, class: 'btn-lg btn-success' %>
+</div>
