--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -2,7 +2,7 @@
 <p><%= markdown_to_html(@wiki.body) %></p>
 
 <% if @wiki.user_id == current_user.id %>
-  <div class="col-md-3">
+  <div class="col-sm-3">
     <div class="list-group">
       <div class="list-group-item">  
         <%= link_to "add collaborator", wiki_collaborators_path(@wiki) %>
