fix jumotron fonts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,3 +23,12 @@
 .wiki {
   padding-top:3%;
 }
+
+p.sign-in-up {
+  padding-top: 10px;
+  font-size:12px;
+}
+
+a.btn.btn-primary {
+  font-size: 12px;
+}
