--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,7 +10,7 @@
       <% if current_user %>
         <p><%= link_to "Check out some wikis!", wikis_path %></p>
       <% else %>
-        <p>
+        <p class="sign-in-up">
           <%= link_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> or
           <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
         </p>
